test/corpus/comments.txt
================================================================================
Comments
================================================================================

I am some text!
<%# Look a comment! %>
I am more some text!

--------------------------------------------------------------------------------

(fragment
  (text)
  (comment)
  (text))

================================================================================
Multi-line Comments
================================================================================

<%# I
    AM
    A
    COMMENT
%>
and some text!

--------------------------------------------------------------------------------

(fragment
  (comment)
  (text))

================================================================================
Elixir Comments
================================================================================

<%= foo
    # |> bar()
    |> baz() %>

--------------------------------------------------------------------------------

(fragment
  (directive
    (expression_value)))

================================================================================
HTML Comments
================================================================================

<p>I am some text!</p>
<!-- Look a comment! -->
<p>I am more some text!</p>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)))
  (comment)
  (tag
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))

================================================================================
New-stile Multi-line Comments
================================================================================

<%!--
  Where'd the directive go?
  <%= @x %>
--%>

--------------------------------------------------------------------------------

(fragment
  (comment))
