test/corpus/expressions.txt
================================================================================
Simple Expression
================================================================================

<div hello={@hello} {@world}/>

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (expression
          (expression_value)))
      (expression
        (expression_value)))))

================================================================================
Single Empty Tuple
================================================================================

<div hello={{}} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (expression
          (expression_value))))))

================================================================================
Nested Empty Tuples
================================================================================

<div hello={{{{{}}}}} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (expression
          (expression_value))))))

================================================================================
Interpolation
================================================================================

<div id={ "##{@id}" } />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (expression
          (expression_value))))))
